@@ -79,11 +79,11 @@ public class ChamadaoRepositoryImplTest extends AbstractRepositoryImplTest {
 		save(produtoVeja);
 		
 		ProdutoEdicao produtoEdicaoVeja1 =
-			Fixture.produtoEdicao(1L, 10, 14, new Long(100), BigDecimal.TEN,
+			Fixture.produtoEdicao(1L, 10, 14, Long.valueOf(100), BigDecimal.TEN,
 								  new BigDecimal(20), "ABCDEFGHIJKLMNOPQ", produtoVeja, null, false);
 		
 		ProdutoEdicao produtoEdicaoVeja2 =
-			Fixture.produtoEdicao(2L, 10, 14, new Long(100), BigDecimal.TEN,
+			Fixture.produtoEdicao(2L, 10, 14, Long.valueOf(100), BigDecimal.TEN,
 								  new BigDecimal(20), "ABCDEFGHIJKLMNOPQ", produtoVeja, null, false);
 		
 
