@@ -106,7 +106,7 @@ public class DividaRepositoryImplTest extends AbstractRepositoryImplTest{
     private Divida dividaMariana;
     private Divida dividaLuis;
 	
-	@Before
+	//@Before
 	public void setUp() {
 		Editor abril = Fixture.editoraAbril();
 		save(abril);
@@ -200,7 +200,7 @@ public class DividaRepositoryImplTest extends AbstractRepositoryImplTest{
 		produtoVeja.setEditor(abril);
 		save(produtoVeja);		
 				
-		ProdutoEdicao produtoEdicaoVeja1 = Fixture.produtoEdicao(1L, 10, 14, new Long(100),
+		ProdutoEdicao produtoEdicaoVeja1 = Fixture.produtoEdicao(1L, 10, 14, Long.valueOf(100),
 				BigDecimal.TEN, new BigDecimal(20), "ABCDEFGHIJKLMNOPQ", produtoVeja, 
 				null, false);
 		save(produtoEdicaoVeja1);
